# AgentCrew

./: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml
src/agent_crew/: main.py
src/agent_crew/crews/example_crew/: example_crew.py
src/agent_crew/crews/example_crew/config/: agents.yaml  tasks.yaml
