[project]
name = "agent-crew"
version = "0.1.0"
description = "Multi-team AI agent crews powered by CrewAI"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.114.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_crew"]
